Revert "use pixel height for queue decoration (avoid subpixel gap)"
This reverts commit c92190b37d5d1bde3ed0720c087b1b088a595c65.

--- a/src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
+++ b/src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
@@ -297,7 +297,7 @@ pre {
    right: 3px;
    content: '';
    display: block;
-   height: 17px;
+   height: 100%;
    width: 7px;
    z-index: -100;
 }
